--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,14 +5,26 @@
     <vendor>bod</vendor>
 
     <depends>com.intellij.modules.platform</depends>
+    <depends>com.intellij.modules.ultimate</depends>
 
     <resource-bundle>messages.MyBundle</resource-bundle>
 
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.github.bod.ijpluginlspexplorations.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
+        <toolWindow
+                factoryClass="com.github.bod.ijpluginlspexplorations.toolWindow.MyToolWindowFactory"
+                id="MyToolWindow"
+        />
+
+        <!--suppress PluginXmlValidity -->
+        <platform.lsp.serverSupportProvider
+                implementation="com.github.bod.ijpluginlspexplorations.lsp.ApolloLspServerSupportProvider"
+        />
     </extensions>
 
     <applicationListeners>
-        <listener class="com.github.bod.ijpluginlspexplorations.listeners.MyApplicationActivationListener" topic="com.intellij.openapi.application.ApplicationActivationListener"/>
+        <listener
+                class="com.github.bod.ijpluginlspexplorations.listeners.MyApplicationActivationListener"
+                topic="com.intellij.openapi.application.ApplicationActivationListener"
+        />
     </applicationListeners>
 </idea-plugin>
