--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,9 @@ platformVersion = 2024.2
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
-platformPlugins =
+#platformPlugins =
+platformPlugins=com.intellij.lang.jsgraphql:242.20224.155
+
 # Example: platformBundledPlugins = com.intellij.java
 platformBundledPlugins =
 
