--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.bod.ijpluginlspexplorations</id>
-    <name>ij-plugin-lsp-explorations</name>
+    <name>ij-lsp-explorations</name>
     <vendor>bod</vendor>
 
     <depends>com.intellij.modules.platform</depends>
