Use lsp4intellij

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,8 @@ platformVersion = 2024.2
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
-#platformPlugins =
-platformPlugins=com.intellij.lang.jsgraphql:242.20224.155
+platformPlugins=
+#platformPlugins=com.intellij.lang.jsgraphql:242.20224.155
 
 # Example: platformBundledPlugins = com.intellij.java
 platformBundledPlugins =
