--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,7 +5,6 @@
     <vendor>bod</vendor>
 
     <depends>com.intellij.modules.platform</depends>
-    <depends>com.intellij.modules.ultimate</depends>
 
     <resource-bundle>messages.MyBundle</resource-bundle>
 
@@ -15,16 +14,87 @@
                 id="MyToolWindow"
         />
 
-        <!--suppress PluginXmlValidity -->
-        <platform.lsp.serverSupportProvider
-                implementation="com.github.bod.ijpluginlspexplorations.lsp.ApolloLspServerSupportProvider"
-        />
+        <fileType
+                name="GraphQLS"
+                implementationClass="com.github.bod.ijpluginlspexplorations.GraphQLSFileType"
+                fieldName="INSTANCE"
+                language="GraphQLS"
+                extensions="graphql"/>
+
+
+        <!-- register a preloading activity. You need to init IntellijLanguageClient with your config, see readme -->
+        <!--        <preloadingActivity implementation="your.plugin.MyPreloadingActivity" id="your.plugin.MyPreloadingActivity"/>-->
+        <!-- Use postStartupActivity instead -->
+        <postStartupActivity implementation="com.github.bod.ijpluginlspexplorations.listeners.MyPostStartupActivity"/>
+
+        <!-- register intellijLanguageClient as a Service OR as a plugin component (see readme)... -->
+        <applicationService serviceImplementation="org.wso2.lsp4intellij.IntellijLanguageClient"/>
+
+        <!-- register a listener on editor events, required for lsp file sync -->
+        <editorFactoryListener implementation="org.wso2.lsp4intellij.listeners.LSPEditorListener"/>
+        <fileDocumentManagerListener implementation="org.wso2.lsp4intellij.listeners.LSPFileDocumentManagerListener"/>
+
+        <!-- for displaying notifications by lsp -->
+        <notificationGroup id="lsp" displayType="STICKY_BALLOON"/>
+
+        <!-- for displaying progress notifications by lsp in the Event Log -->
+        <notificationGroup id="LSPProgressNotification" displayType="NONE"/>
+
+        <!-- for displaying the statusbar icon -->
+        <statusBarWidgetFactory implementation="org.wso2.lsp4intellij.statusbar.LSPServerStatusWidgetFactory"
+                                id="org.wso2.lsp4intellij.statusbar.LSPServerStatusWidgetFactory"
+                                order="first"/>
+
+        <!-- needed for completion -->
+        <completion.contributor implementationClass="org.wso2.lsp4intellij.contributors.LSPCompletionContributor"
+                                id="org.wso2.lsp4intellij.contributors.LSPCompletionContributor" language="GraphQLS"/>
+
+        <!-- needed for completion as well as signature help -->
+        <typedHandler implementation="org.wso2.lsp4intellij.listeners.LSPTypedHandler"
+                      id="LSPTypedHandler"/>
+
+        <!-- needed for code diagnostics -->
+        <externalAnnotator id="LSPAnnotator" language="GraphQLS"
+                           implementationClass="org.wso2.lsp4intellij.contributors.annotator.LSPAnnotator"/>
+
+        <!-- needed for Workspace Symbols -->
+        <gotoSymbolContributor implementation="org.wso2.lsp4intellij.contributors.symbol.LSPSymbolContributor"
+                               id="LSPSymbolContributor"/>
+
+        <!-- needed for renaming -->
+        <renameHandler implementation="org.wso2.lsp4intellij.contributors.rename.LSPRenameHandler" id="LSPRenameHandler" order="first"/>
+        <renamePsiElementProcessor implementation="org.wso2.lsp4intellij.contributors.rename.LSPRenameProcessor" id="LSPRenameProcessor"
+                                   order="first"/>
+
+        <!-- needed for folding support -->
+        <lang.foldingBuilder language="GraphQLS" implementationClass="org.wso2.lsp4intellij.contributors.LSPFoldingRangeProvider"
+                             id="LSPFoldingRangeProvider" order="first"/>
+
     </extensions>
+
+    <actions>
+        <!-- needed for hover -->
+        <action id="org.intellij.sdk.action.QuickDocAction" class="org.wso2.lsp4intellij.actions.LSPQuickDocAction">
+        </action>
+
+        <!-- needed for find references -->
+        <action class="org.wso2.lsp4intellij.actions.LSPReferencesAction" id="LSPFindUsages">
+            <keyboard-shortcut first-keystroke="shift alt F7" keymap="$default"/>
+        </action>
+    </actions>
+
 
     <applicationListeners>
         <listener
                 class="com.github.bod.ijpluginlspexplorations.listeners.MyApplicationActivationListener"
                 topic="com.intellij.openapi.application.ApplicationActivationListener"
         />
+
+
+        <!-- required for lsp file sync -->
+        <listener class="org.wso2.lsp4intellij.listeners.VFSListener"
+                  topic="com.intellij.openapi.vfs.VirtualFileListener"/>
+        <listener class="org.wso2.lsp4intellij.listeners.LSPProjectManagerListener"
+                  topic="com.intellij.openapi.project.ProjectManagerListener"/>
     </applicationListeners>
 </idea-plugin>
